# ksv17

./: .gitignore  Dockerfile  README.md  docker-compose.yml
addons/docs/: README.md  helpdesk_customer_portal_guide.md  helpdesk_customization_recap.md  helpdesk_modular_config_guide.md  helpdesk_modular_config_smoke_test_checklist.md  helpdesk_modularization_phase1_audit.md  helpdesk_pending_backlog.md  helpdesk_quick_start.md  helpdesk_user_guide_end_to_end.md
config/: odoo.conf
helpdesk/: .copier-answers.yml  .pre-commit-config.yaml  README.md
helpdesk/helpdesk_custom_api/: __manifest__.py  hooks.py
helpdesk/helpdesk_custom_approval/: __manifest__.py  hooks.py
helpdesk/helpdesk_custom_asset_coverage/: hooks.py
helpdesk/helpdesk_custom_calendar/: __manifest__.py
helpdesk/helpdesk_custom_claude_ai/: __manifest__.py
helpdesk/helpdesk_custom_communication_analytics/: hooks.py
helpdesk/helpdesk_custom_contract/: __manifest__.py  hooks.py
helpdesk/helpdesk_custom_contract_renewal/: hooks.py
helpdesk/helpdesk_custom_contract_renewal_analytics/: hooks.py
helpdesk/helpdesk_custom_customer_360/: __manifest__.py
helpdesk/helpdesk_custom_customer_communication_log/: __manifest__.py
helpdesk/helpdesk_custom_customer_success_playbook/: __manifest__.py
helpdesk/helpdesk_custom_demo/: __manifest__.py
helpdesk/helpdesk_custom_field_service_report/: __manifest__.py
helpdesk/helpdesk_custom_invoice/: __manifest__.py  hooks.py
helpdesk/helpdesk_custom_knowledge/: __manifest__.py
helpdesk/helpdesk_custom_knowledge_portal/: __manifest__.py  hooks.py
helpdesk/helpdesk_custom_portal/: __manifest__.py
helpdesk/helpdesk_custom_problem_management/: __manifest__.py
helpdesk/helpdesk_custom_renewal_forecast/: __manifest__.py
helpdesk/helpdesk_custom_sales_handoff/: hooks.py
helpdesk/helpdesk_custom_service_review_pack/: __manifest__.py
helpdesk/helpdesk_custom_whatsapp/: __manifest__.py
helpdesk/helpdesk_mgmt/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_activity/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_assign_method/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_crm/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_merge/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_project_domain/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_rating/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_sale/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_sla/: README.rst
helpdesk/helpdesk_mgmt_stage_validation/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_template/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmt_timesheet/: README.rst  __manifest__.py
helpdesk/helpdesk_mgmtsystem_nonconformity/: README.rst  __manifest__.py
helpdesk/helpdesk_ticket_close_inactive/: README.rst  __manifest__.py
helpdesk/helpdesk_ticket_partner_response/: README.rst  __manifest__.py
helpdesk/helpdesk_timesheet_time_type_non_billable/: README.rst  __init__.py  __manifest__.py
helpdesk/helpdesk_type/: README.rst  __manifest__.py
helpdesk/setup/_metapackage/: pyproject.toml
helpdesk_mcp_server/: README.md  odoo_client.py  server.py
knowledge/: .copier-answers.yml  .pre-commit-config.yaml  README.md
knowledge/attachment_category/: README.rst
knowledge/attachment_zipped_download/: README.rst  __manifest__.py
knowledge/document_knowledge/: README.rst  __manifest__.py
knowledge/document_page/: README.rst  __manifest__.py
knowledge/document_page_approval/: README.rst  __manifest__.py
knowledge/document_page_partner/: README.rst  __manifest__.py
knowledge/document_page_project/: README.rst
knowledge/document_page_reference/: README.rst  __manifest__.py
knowledge/document_page_tag_print_control/: README.rst  __manifest__.py
knowledge/document_url/: README.rst  __manifest__.py
knowledge/setup/_metapackage/: pyproject.toml
management-system/: .copier-answers.yml  .pre-commit-config.yaml  README.md
management-system/document_page_environment_manual/: README.rst  __manifest__.py
management-system/document_page_environmental_aspect/: README.rst  __manifest__.py
management-system/document_page_health_safety_manual/: README.rst  __manifest__.py
management-system/document_page_procedure/: README.rst  __manifest__.py
management-system/document_page_quality_manual/: README.rst  __manifest__.py
management-system/document_page_work_instruction/: README.rst  __manifest__.py
management-system/mgmtsystem/: README.rst  __manifest__.py
management-system/mgmtsystem_action/: README.rst  __manifest__.py
management-system/mgmtsystem_action_efficacy/: README.rst  __manifest__.py
management-system/mgmtsystem_action_template/: README.rst  __manifest__.py
management-system/mgmtsystem_audit/: README.rst  __manifest__.py
management-system/mgmtsystem_hazard/: README.rst  __manifest__.py
management-system/mgmtsystem_hazard_risk/: README.rst  __manifest__.py
management-system/mgmtsystem_manual/: README.rst  __manifest__.py
management-system/mgmtsystem_nonconformity/: README.rst  __init__.py  __manifest__.py
management-system/mgmtsystem_nonconformity_hazard/: README.rst  __manifest__.py
management-system/mgmtsystem_nonconformity_hr/: README.rst
management-system/mgmtsystem_nonconformity_maintenance_equipment/: README.rst  __manifest__.py
management-system/mgmtsystem_nonconformity_mrp/: README.rst  __manifest__.py
management-system/mgmtsystem_nonconformity_product/: README.rst  __manifest__.py
management-system/mgmtsystem_nonconformity_quality_control_oca/: README.rst  (+1 more)
management-system/setup/_metapackage/: pyproject.toml
project/: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md
project/setup/_metapackage/: pyproject.toml
timesheet/: .copier-answers.yml  .pre-commit-config.yaml  README.md
timesheet/setup/_metapackage/: pyproject.toml
web/: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
website/: .copier-answers.yml  .pre-commit-config.yaml  README.md
website/setup/_metapackage/: pyproject.toml
(+1953 files in other folders)
