[project]
name = "odoo-addons-oca-helpdesk"
version = "17.0.20260304.0"
dependencies = [
    "odoo-addon-helpdesk_mgmt>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_activity>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_assign_method>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_crm>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_merge>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_portal_follower>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_project>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_project_domain>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_rating>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_sale>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_sla>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_stage_validation>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_template>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmt_timesheet>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_mgmtsystem_nonconformity>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_portal_restriction>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_ticket_close_inactive>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_ticket_open_tab>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_ticket_partner_response>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_ticket_related>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_timesheet_time_type>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_timesheet_time_type_non_billable>=17.0dev,<17.1dev",
    "odoo-addon-helpdesk_type>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
