[project]
name = "odoo-addons-oca-knowledge"
version = "17.0.20250821.0"
dependencies = [
    "odoo-addon-attachment_category>=17.0dev,<17.1dev",
    "odoo-addon-attachment_zipped_download>=17.0dev,<17.1dev",
    "odoo-addon-document_knowledge>=17.0dev,<17.1dev",
    "odoo-addon-document_page>=17.0dev,<17.1dev",
    "odoo-addon-document_page_access_group>=17.0dev,<17.1dev",
    "odoo-addon-document_page_approval>=17.0dev,<17.1dev",
    "odoo-addon-document_page_group>=17.0dev,<17.1dev",
    "odoo-addon-document_page_partner>=17.0dev,<17.1dev",
    "odoo-addon-document_page_project>=17.0dev,<17.1dev",
    "odoo-addon-document_page_reference>=17.0dev,<17.1dev",
    "odoo-addon-document_page_tag>=17.0dev,<17.1dev",
    "odoo-addon-document_page_tag_print_control>=17.0dev,<17.1dev",
    "odoo-addon-document_url>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
