[project]
name = "odoo-addons-oca-management-system"
version = "17.0.20250922.0"
dependencies = [
    "odoo-addon-document_page_environment_manual>=17.0dev,<17.1dev",
    "odoo-addon-document_page_environmental_aspect>=17.0dev,<17.1dev",
    "odoo-addon-document_page_health_safety_manual>=17.0dev,<17.1dev",
    "odoo-addon-document_page_procedure>=17.0dev,<17.1dev",
    "odoo-addon-document_page_quality_manual>=17.0dev,<17.1dev",
    "odoo-addon-document_page_work_instruction>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_action>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_action_efficacy>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_action_template>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_audit>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_hazard>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_hazard_risk>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_info_security_manual>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_manual>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_hazard>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_hr>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_maintenance_equipment>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_mrp>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_product>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_quality_control_oca>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_repair>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_nonconformity_type>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_partner>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_quality>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_review>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_review_survey>=17.0dev,<17.1dev",
    "odoo-addon-mgmtsystem_survey>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
