[project]
name = "odoo-addons-oca-project"
version = "17.0.20260203.0"
dependencies = [
    "odoo-addon-project_administrator_restricted_visibility>=17.0dev,<17.1dev",
    "odoo-addon-project_analytic_code>=17.0dev,<17.1dev",
    "odoo-addon-project_department>=17.0dev,<17.1dev",
    "odoo-addon-project_group>=17.0dev,<17.1dev",
    "odoo-addon-project_group_hr_timesheet>=17.0dev,<17.1dev",
    "odoo-addon-project_hr>=17.0dev,<17.1dev",
    "odoo-addon-project_key>=17.0dev,<17.1dev",
    "odoo-addon-project_merge>=17.0dev,<17.1dev",
    "odoo-addon-project_milestone_status>=17.0dev,<17.1dev",
    "odoo-addon-project_parent>=17.0dev,<17.1dev",
    "odoo-addon-project_parent_task_filter>=17.0dev,<17.1dev",
    "odoo-addon-project_portal_task_visibility>=17.0dev,<17.1dev",
    "odoo-addon-project_purchase_link>=17.0dev,<17.1dev",
    "odoo-addon-project_risk>=17.0dev,<17.1dev",
    "odoo-addon-project_role>=17.0dev,<17.1dev",
    "odoo-addon-project_sequence>=17.0dev,<17.1dev",
    "odoo-addon-project_status>=17.0dev,<17.1dev",
    "odoo-addon-project_tag_hierarchy>=17.0dev,<17.1dev",
    "odoo-addon-project_task_add_very_high>=17.0dev,<17.1dev",
    "odoo-addon-project_task_code>=17.0dev,<17.1dev",
    "odoo-addon-project_task_default_stage>=17.0dev,<17.1dev",
    "odoo-addon-project_task_description_template>=17.0dev,<17.1dev",
    "odoo-addon-project_task_material>=17.0dev,<17.1dev",
    "odoo-addon-project_task_name_with_id>=17.0dev,<17.1dev",
    "odoo-addon-project_task_note>=17.0dev,<17.1dev",
    "odoo-addon-project_task_pull_request>=17.0dev,<17.1dev",
    "odoo-addon-project_task_related>=17.0dev,<17.1dev",
    "odoo-addon-project_task_stage_mgmt>=17.0dev,<17.1dev",
    "odoo-addon-project_task_stage_state>=17.0dev,<17.1dev",
    "odoo-addon-project_task_tag>=17.0dev,<17.1dev",
    "odoo-addon-project_template>=17.0dev,<17.1dev",
    "odoo-addon-project_timeline>=17.0dev,<17.1dev",
    "odoo-addon-project_timeline_hr_timesheet>=17.0dev,<17.1dev",
    "odoo-addon-project_timesheet_time_control>=17.0dev,<17.1dev",
    "odoo-addon-project_type>=17.0dev,<17.1dev",
    "odoo-addon-project_version>=17.0dev,<17.1dev",
    "odoo-addon-sale_project_reimbursement_cost>=17.0dev,<17.1dev",
    "odoo-addon-sale_project_task_recurrency>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
