[project]
name = "odoo-addons-oca-website"
version = "17.0.20251017.0"
dependencies = [
    "odoo-addon-website_breadcrumb>=17.0dev,<17.1dev",
    "odoo-addon-website_conditional_visibility_user_group>=17.0dev,<17.1dev",
    "odoo-addon-website_cookiebot>=17.0dev,<17.1dev",
    "odoo-addon-website_cookiefirst>=17.0dev,<17.1dev",
    "odoo-addon-website_crm_quick_answer>=17.0dev,<17.1dev",
    "odoo-addon-website_form_require_legal>=17.0dev,<17.1dev",
    "odoo-addon-website_forum_subscription>=17.0dev,<17.1dev",
    "odoo-addon-website_google_tag_manager>=17.0dev,<17.1dev",
    "odoo-addon-website_legal_page>=17.0dev,<17.1dev",
    "odoo-addon-website_local_font>=17.0dev,<17.1dev",
    "odoo-addon-website_menu_by_user_status>=17.0dev,<17.1dev",
    "odoo-addon-website_odoo_debranding>=17.0dev,<17.1dev",
    "odoo-addon-website_require_login>=17.0dev,<17.1dev",
    "odoo-addon-website_snippet_big_button>=17.0dev,<17.1dev",
    "odoo-addon-website_snippet_marginless_gallery>=17.0dev,<17.1dev",
    "odoo-addon-website_whatsapp>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
